Refactor : Moved all level related classes(LevelParent, LevelOne, LevelTwo, LevelBuilder) to new package called 'levels' for improved separation of concerns.